# libacars

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.github/workflows/: build.yml
doc/: API_REFERENCE.md  PROG_GUIDE.md
examples/: CMakeLists.txt  Makefile  adsc_get_position.c  cpdlc_get_position.c  decode_acars_apps.c  decode_arinc.c  decpdlc.c
libacars/: CMakeLists.txt  FANS.h  acars.c  acars.h  adsc.c  adsc.h  arinc.c  arinc.h  asn1-format-common.c  asn1-format-common.h  asn1-format-cpdlc-json.c  asn1-format-cpdlc-text.c  asn1-format-cpdlc.h  asn1-util.c  asn1-util.h  atis.c  atis.h  bitstream.c  bitstream.h  config.h.in  config_defaults.h  configuration.c  cpdlc.c  cpdlc.h  crc.c  crc.h  dict.c  dict.h  find_zlibdll.cmake  hash.c  hash.h  json.c  json.h  libacars.c  libacars.h  libacars.pc.in  list.c  list.h  macros.h  media-adv.c  (+18 more)
libacars/asn1/: ANY.c  ANY.h  BIT_STRING.c  BIT_STRING.h  BOOLEAN.c  BOOLEAN.h  CMakeLists.inc  CMakeLists.txt  ENUMERATED.c  ENUMERATED.h  EXTERNAL.c  EXTERNAL.h  FANSATCDownlinkMessage.c  FANSATCDownlinkMessage.h  FANSATCDownlinkMsgElementId.c  FANSATCDownlinkMsgElementId.h  FANSATCDownlinkMsgElementIdSequence.c  FANSATCDownlinkMsgElementIdSequence.h  FANSATCMessageHeader.c  FANSATCMessageHeader.h  FANSATCUplinkMessage.c  FANSATCUplinkMessage.h  FANSATCUplinkMsgElementId.c  FANSATCUplinkMsgElementId.h  FANSATCUplinkMsgElementIdSequence.c  FANSATCUplinkMsgElementIdSequence.h  FANSATISCode.c  FANSATISCode.h  FANSATWAlongTrackWaypoint.c  FANSATWAlongTrackWaypoint.h  FANSATWAlongTrackWaypointSequence.c  FANSATWAlongTrackWaypointSequence.h  FANSATWAltitude.c  FANSATWAltitude.h  FANSATWAltitudeSequence.c  FANSATWAltitudeSequence.h  FANSATWAltitudeTolerance.c  FANSATWAltitudeTolerance.h  FANSATWDistance.c  FANSATWDistance.h  (+435 more)
src/: CMakeLists.txt  Makefile  acars.c  acars.h  adsc.c  adsc.h  arinc.c  arinc.h  asn1-format-common.c  asn1-format-common.h  asn1-format-cpdlc.c  asn1-format-cpdlc.h  asn1-util.c  asn1-util.h  bitstream.c  bitstream.h  cpdlc.c  cpdlc.h  crc.c  crc_arinc.c  crc_arinc.h  libacars.c  libacars.h  list.c  list.h  macros.h  util.c  util.h  vstring.c  vstring.h
src/asn1/: CMakeLists.txt  Makefile  Makefile.am.sample  constr_TYPE.c  constr_TYPE.h
src/asn1/patches/: asn1_output_to_vstring.diff
src/examples/: CMakeLists.txt  adsc_get_position.c  cpdlc_get_position.c  decode_acars_apps.c  decode_arinc.c  decpdlc.c  media_advisory.c
src/libacars/: CMakeLists.txt  acars.c  acars.h  adsc.c  adsc.h  arinc.c  arinc.h  asn1-format-common.c  asn1-format-common.h  asn1-format-cpdlc-json.c  asn1-format-cpdlc-text.c  asn1-format-cpdlc.c  asn1-format-cpdlc.h  asn1-util.c  asn1-util.h  bitstream.c  bitstream.h  config.h.in  cpdlc.c  cpdlc.h  crc.c  crc.h  find_zlibdll.cmake  json.c  json.h  libacars.c  libacars.h  list.c  list.h  macros.h  media-adv.c  media-adv.h  miam-core.c  miam-core.h  miam.c  miam.h  symversions.ldscript  util.c  util.h  version.h  (+3 more)
src/libacars/asn1/: CMakeLists.txt  Makefile.am.sample  Makefile.inc  converter-sample.c  regen.sh
src/libacars/asn1/patches/: asn1_output_to_vstring.diff  quoted_includes.diff
